--- a/src/App.css
+++ b/src/App.css
@@ -93,24 +93,39 @@ h2 {
   position: absolute;
   display: flex;
   flex-direction: column;
-  max-width: 30vw;
-  max-height: 25vh;
+  max-width: 50vw;
+  max-height: 50vh;
+  left: 0;
   right: 0;
   bottom: 0;
-  margin: 10px;
-  margin-bottom: 0;
+  top: 0;
+  margin: auto;
+  background-color: var(--main);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  border-radius: 15px;
+  z-index: 2;
+  display: none;
+  transition: all 0.3s ease-in;
 }
 
 a {
-  font-size: 12px;
-  color: var(--accent);
+  font-size: 15px;
+  color: white;
   font-weight: bold;
-  margin: 5px;
-  cursor: pointer;;
+  cursor: pointer;
+  background-color: var(--accent);
+  padding: 5px;
+  border-radius: 10px;
+  text-decoration: none;
 }
 
 .plantviewimgcontainer {
-  height: 15vh;
+  height: 40vh;
+  margin-bottom: 10px;
 }
 
 .plantviewimgcontainer img {
@@ -119,9 +134,25 @@ a {
 }
 
 .plantviewcontainer p {
-  font-size: 10px;
+  font-size: 14px;
   font-weight: bold;
-  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.plantviewcontainer button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-radius: 100%;
+  border: none;
+  background-color: var(--accent);
+  color: white;
+  font-size: 15px;
+  font-weight: bolder;
+  margin: 2px;
+  width: 30px;
+  height: 30px;
 }
 
 .imagedots {
@@ -163,6 +194,27 @@ a {
   bottom: 0;
   left: 0;
   cursor: pointer;
+}
+
+.togglepopup {
+  position: absolute;
+  right: 10px;
+  top: 35%;
+  display: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 15px;
+  border: none;
+  background-color: var(--accent);
+}
+
+.backdropfilter {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  backdrop-filter: blur(4px);
+  display: none;
 }
 
 @media screen and (max-width: 400px){
