--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   --accent: #253e5c;
   --right: #00d977;
   --wrong: #ed4337;
+  --spin: 100%;
 }
 
 body {
@@ -246,6 +247,55 @@ a {
 .resetbutton img {
   transform: rotate(50deg);
   object-fit: contain;
+}
+
+.scoredisplay {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  margin: 0;
+  padding: 0;
+}
+
+.timerouter {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background-color: var(--background);
+  border: none;
+  /*position: absolute;
+  top: 5px;
+  left: 5px;*/
+  border-radius: 100%;
+  background: conic-gradient(
+    var(--accent) var(--spin),
+    rgb(220, 220, 220) var(--spin)
+  );
+}
+
+.timerinner {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 100%;
+  top: 5px;
+  left: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.scoredisplay p {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-size: 12px;
+  margin-top: 3px;
+  color: var(--accent);
 }
 
 @media screen and (max-width: 400px){
